added about section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="classes/chunk.js"></script>
     <script src="classes/world.js"></script>
     <script src="classes/player.js"></script>
+    <script src="about.js"></script>
     <img src="textures/luminosity0.png" id="luminosity0">
     <img src="textures/grass.png" id="grass">
     <img src="textures/grass_bg.png" id="grass_bg">
@@ -45,21 +46,21 @@
             position: absolute;
             bottom: 1%;
             left: 5%;
-            z-index: 100;
+            z-index: 5;
             text-align: center;
         }
         #coords {
             position: absolute;
             top: 1%;
             right: 5%;
-            z-index: 100;
+            z-index: 5;
             text-align: right;
         }
         #framerate {
             position: absolute;
             top: 1%;
             left: 5%;
-            z-index: 100;
+            z-index: 5;
             text-align: left;
         }
         .noselect {
